@@ -1,0 +1,24 @@
+#!perl -T
+use strict;
+use warnings FATAL => 'all';
+use Test::More tests => 2;
+
+use Spreadsheet::HTML;
+
+my $data = [
+    [qw(header1 header2 header3 header4 )],
+    [qw(foo1 bar1 baz1 qux1)],
+    [qw(foo2 bar2 baz2 qux2)],
+    [qw(foo3 bar3 baz3 qux3)],
+    [qw(foo4 bar4 baz4 qux4)],
+];
+
+my $table = Spreadsheet::HTML->new( data => $data );
+
+is $table->generate,
+    '<table><tr><th>header1</th><th>header2</th><th>header3</th><th>header4</th></tr><tr><td>foo1</td><td>bar1</td><td>baz1</td><td>qux1</td></tr><tr><td>foo2</td><td>bar2</td><td>baz2</td><td>qux2</td></tr><tr><td>foo3</td><td>bar3</td><td>baz3</td><td>qux3</td></tr><tr><td>foo4</td><td>bar4</td><td>baz4</td><td>qux4</td></tr></table>',
+    "default headers untouched";
+
+is $table->generate( headings => sub { ucfirst shift } ),
+    '<table><tr><th>Header1</th><th>Header2</th><th>Header3</th><th>Header4</th></tr><tr><td>foo1</td><td>bar1</td><td>baz1</td><td>qux1</td></tr><tr><td>foo2</td><td>bar2</td><td>baz2</td><td>qux2</td></tr><tr><td>foo3</td><td>bar3</td><td>baz3</td><td>qux3</td></tr><tr><td>foo4</td><td>bar4</td><td>baz4</td><td>qux4</td></tr></table>',
+    "headers changed";
