@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.11
+    - added 'headings' attribute
 
 0.10
     - using HTML::Element in process now()
